test/errhandling/psahabu/generic-throws.good
generic-throws.chpl:9: error: halt reached - Error: 42 is a numeric type
